# ipyleaflet

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  SVGOverlay.ipynb  environment-dev.yml  environment.yml  install-nbextension.py  jupyter-leaflet.json  package-lock.json  postBuild  pyproject.toml  setup.cfg  setup.py  test.ipynb
.github/workflows/: check-release.yml  main.yml  prep-release.yml  publish-release.yml  ui-tests.yml  update_galata_references.yml
docs/: Makefile  build-environment.yml  changelog.rst  conf.py  environment.yml  index.rst  ipyleaflet.ipynb  jupyterlite_config.json  requirements.txt
docs/_static/: main_stylesheet.css
docs/controls/: draw_control.rst  fullscreen_control.rst  geoman_draw_control.rst  index.rst  layers_control.rst  search_control.rst  widget_control.rst
docs/installation/: index.rst
docs/layers/: choropleth.rst  circle.rst  circle_marker.rst  geodata.rst  heatmap.rst  index.rst  layer_group.rst  local_tile_layer.rst  popup.rst  rectangle.rst  tooltip.rst
docs/map_and_basemaps/: basemaps.rst  index.rst
docs/source/: api.rst  api_documentation.rst  conf.py  index.rst  installation.rst  ipyleaflet.ipynb  jupyterlite_config.json  related_projects.rst  requirements.txt  usage.rst
docs/usage/: index.rst
examples/: Add_layer_or_control.ipynb  Animation.ipynb  AntPath.ipynb  AwesomeIcons.ipynb  BaseMap.ipynb  CanvasRenderer.ipynb  Choropleth.ipynb  Choropleth_with_NANS.ipynb  ColormapControl.ipynb  CountriesGeoJSON.ipynb  CustomProjections.ipynb  CustomTMS.ipynb  CustomTileServer.ipynb  Development.ipynb  DrawControl.ipynb  DropdownControl.ipynb  Fullscreen.ipynb  GPX.ipynb  GeoData.ipynb  GeoData_on_hover.ipynb  GeoJSON.ipynb  GeoJson_EU_on_hover.ipynb  GeomanDrawControl.ipynb  Geoportal.ipynb  GeoportalControls.ipynb  GeoportalLayers.ipynb  Heatmap.ipynb  Heatmap_with_colormap.ipynb  ImageService.ipynb  Image_slider.ipynb  KML.ipynb  LayerGroup.ipynb  LegendControl.ipynb  LinearColormap.ipynb  MagnifyingGlass.ipynb  MapContainer.ipynb  MapCursorStyle.ipynb  MapPanes.ipynb  MarkerCluster-GeoJson.ipynb  MarkerCluster.ipynb  (+43 more)
examples/.github/: PULL_REQUEST_TEMPLATE.md
examples/.ipynb_checkpoints/: Development-checkpoint.ipynb
examples/data/: example.gpx  test.wkt  us-states.kml
ipyleaflet/: .flake8  __init__.py  _version.py  basemaps.py  geoportal.py  here.py  leaflet.py  projections.py  velocity.py  xarray_ds.py
js/: .eslintrc.json  .yarnrc.yml  README.md  amd-public-path.js  amd-public-path.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
js/css/: jupyter-leaflet.css
js/lib/: amd-public-path.d.ts  index.d.ts  projections.d.ts
js/src/: L_leaflet.js  Map.js  Map.ts  amd-public-path.ts  embed.js  embed.ts  extension.js  extension.ts  index.js  index.ts  jupyter-leaflet.css  jupyter-leaflet.js  jupyter-leaflet.ts  jupyterlab-plugin.js  jupyterlab-plugin.ts  labplugin.js  leaflet-heat.js  leaflet-heat.ts  leaflet-imageservice.js  leaflet-imageservice.ts  leaflet-magnifyingglass.js  leaflet.js  (+7 more)
jslab/: index.js  package.json
leafletwidget/: __init__.py  layer.py  leaflet.py  leafletwidget.js  map.py  notebook.py
python/ipyleaflet/: LICENSE  README.md  pyproject.toml
python/ipyleaflet/ipyleaflet/: __init__.py  _version.py  leaflet.py  velocity.py
python/ipyleaflet_core/: pyproject.toml  setup.py
python/ipyleaflet_core/ipyleaflet/: leaflet.py
python/ipyleaflet_core/ipyleaflet_core/: __init__.py  projections.py  velocity.py
python/jupyter_leaflet/: .eslintrc.json  .prettierignore  README.md  jupyter-leaflet.json  package.json  pyproject.toml  webpack.config.js
python/jupyter_leaflet/jupyter_leaflet/: __init__.py
python/jupyter_leaflet/lib/: amd-public-path.d.ts  embed.d.ts  embed.js  extension.js  index.d.ts  jupyter-leaflet.d.ts  jupyter-leaflet.d.ts.map  jupyter-leaflet.js  jupyter-leaflet.js.map  jupyterlab-plugin.d.ts  leaflet-imageservice.d.ts.map  leaflet-imageservice.js.map  leaflet-magnifyingglass.d.ts.map  leaflet.d.ts.map  leaflet.js  notebook.d.ts  notebook.js  utils.d.ts.map  utils.js
python/jupyter_leaflet/lib/controls/: AttributionControl.d.ts  AttributionControl.d.ts.map  Control.d.ts.map  DrawControl.js.map  FullScreenControl.d.ts.map  FullScreenControl.js.map  LayersControl.d.ts  LayersControl.d.ts.map  LegendControl.js  MeasureControl.d.ts.map  MeasureControl.js  ScaleControl.d.ts  ScaleControl.js.map  SearchControl.d.ts  SearchControl.d.ts.map  SearchControl.js.map  SplitMapControl.d.ts.map  SplitMapControl.js.map  WidgetControl.d.ts  WidgetControl.js  ZoomControl.js.map
python/jupyter_leaflet/lib/layers/: AntPath.d.ts  AntPath.d.ts.map  AntPath.js.map  AwesomeIcon.d.ts  Circle.d.ts  Circle.d.ts.map  Circle.js  Circle.js.map  CircleMarker.d.ts  CircleMarker.d.ts.map  CircleMarker.js  CircleMarker.js.map  DivIcon.d.ts.map  DivIcon.js  FeatureGroup.d.ts  FeatureGroup.d.ts.map  GeoJSON.js.map  Heatmap.d.ts.map  Icon.d.ts.map  Icon.js  ImageService.js.map  Layer.js.map  LayerGroup.d.ts  LayerGroup.js  LayerGroup.js.map  LocalTileLayer.js.map  Marker.d.ts.map  Marker.js.map  MarkerCluster.d.ts  MarkerCluster.js  PMTilesLayer.d.ts  PMTilesLayer.d.ts.map  PMTilesLayer.js  PMTilesLayer.js.map  Path.d.ts  Path.d.ts.map  Path.js.map  Polygon.d.ts  Polygon.d.ts.map  Polyline.js  (+18 more)
python/jupyter_leaflet/src/: Map.ts  index.ts  jupyter-leaflet.ts  leaflet-magnifyingglass.ts  leaflet.ts  notebook.ts  utils.ts
python/jupyter_leaflet/src/controls/: AttributionControl.ts  DrawControl.ts  GeomanDrawControl.ts  MeasureControl.ts  ZoomControl.ts
python/jupyter_leaflet/src/definitions/: leaflet-extend.d.ts
python/jupyter_leaflet/src/layers/: AntPath.ts  Circle.ts  CircleMarker.ts  DivIcon.ts  GeoJSON.ts  ImageOverlay.ts  Layer.ts  MarkerCluster.ts  PMTilesLayer.ts  Polygon.ts  Polyline.ts  RasterLayer.ts  TileLayer.ts  Tooltip.ts  VectorLayer.ts  VectorTileLayer.ts  WMSLayer.ts
scripts/: update
tests/: draw_test.py  test_external_here.py
ui-tests/: .pnp.cjs  jupyter_server_config.py  package.json  playwright.config.js
(+434 files in other folders)
