[build-system]
requires = ["jupyter_packaging~=0.12", "jupyterlab>=3.0.0,<3.6", "setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipyleaflet"
version = "0.17.3"
description = "A Jupyter widget for dynamic Leaflet maps"
keywords = ["ipython", "jupyter", "widgets", "graphics", "GIS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.7"
dependencies = [
    "ipywidgets>=7.6.0,<9",
    "traittypes>=0.2.1,<3",
    "xyzservices>=2021.8.1",
    "branca>=0.5.0",
]

[[project.authors]]
name = "Project Jupyter"
email = "jupyter@googlegroups.com"

[project.license]
text = "MIT"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/jupyter-widgets/ipyleaflet"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]
packages = ["ipyleaflet"]
