# [build-system]
# # avoid 3.6 so we don't need the rust buildchain
# requires = ["jupyter_packaging~=0.12", "jupyterlab~=4.0.8", "setuptools>=40.8.0", "wheel"]
# build-backend = "setuptools.build_meta"


[build-system]
requires = [
    "hatchling",
    "jupyterlab==4.*",
]
build-backend = "hatchling.build"

[project]
name = "ipyleaflet"
version = "0.18.1"
description = "A Jupyter widget for dynamic Leaflet maps"
readme = "README.md"
authors = [
    { name = "Project Jupyter", email = "jupyter@googlegroups.com" },
]
keywords = [
   "ipython", "jupyter", "widgets", "graphics", "GIS",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "ipywidgets>=7.6.0,<9",
    "traittypes>=0.2.1,<3",
    "xyzservices>=2021.8.1",
    "branca>=0.5.0",
]

# [project.license]
# file = "LICENSE.txt"

[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/jupyter-widgets/ipyleaflet"

[tool.hatch.build]
artifacts = [
    "ipyleaflet/nbextension/index.*",
    "ipyleaflet/labextension",
]

# TODO nbextension
[tool.hatch.build.targets.wheel.shared-data]
"ipyleaflet/nbextension" = "share/jupyter/nbextensions/jupyter-leaflet"
"ipyleaflet/labextension" = "share/jupyter/labextensions/jupyter-Leaflet"
"jupyter-leaflet.json" = "etc/jupyter/nbconfig/notebook.d/jupyter-leaflet.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
ensured-targets = [
    "ipyleaflet/nbextension/index.js",
    "ipyleaflet/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.8.1",
]
build-function = "hatch_jupyter_builder.npm_builder"

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "./js"
build_cmd = "build:extensions"
npm = [
    "jlpm", # TODO jlpm?
]

# TODO tbump?
# [tool.tbump]
# field = [
#     { name = "channel", default = "" },
#     { name = "release", default = "" },
# ]

# [tool.tbump.version]
# current = "0.13.1"
# regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

# [tool.tbump.git]
# message_template = "Bump to {new_version}"
# tag_template = "v{new_version}"

# [[tool.tbump.file]]
# src = "pyproject.toml"
# version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\""

# [[tool.tbump.file]]
# src = "ipyleaflet/_version.py"

# [[tool.tbump.file]]
# src = "package.json"
# version_template = "\"version\": \"{major}.{minor}.{patch}{channel}{release}"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
]
ignore = ["E501", "E731"] 
