[build-system]
requires = [
    "hatchling",
    "jupyterlab==4.*",
]
build-backend = "hatchling.build"

[project]
name = "ipyleaflet"
version = "0.18.1"
description = "A Jupyter widget for dynamic Leaflet maps"
readme = "README.md"
authors = [
    { name = "Project Jupyter", email = "jupyter@googlegroups.com" },
]
keywords = [
   "ipython", "jupyter", "widgets", "graphics", "GIS",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "ipywidgets>=7.6.0,<9",
    "traittypes>=0.2.1,<3",
    "xyzservices>=2021.8.1",
    "branca>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/jupyter-widgets/ipyleaflet"

[tool.hatch.build]
artifacts = [
    "ipyleaflet/nbextension/index.*",
    "ipyleaflet/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"ipyleaflet/nbextension" = "share/jupyter/nbextensions/jupyter-leaflet"
"ipyleaflet/labextension" = "share/jupyter/labextensions/jupyter-leaflet"
"jupyter-leaflet.json" = "etc/jupyter/nbconfig/notebook.d/jupyter-leaflet.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
ensured-targets = [
    "ipyleaflet/nbextension/index.js",
    "ipyleaflet/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.8.1",
]
build-function = "hatch_jupyter_builder.npm_builder"

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "./js"
build_cmd = "build"
npm = [
    "jlpm",
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
]
ignore = ["E501", "E731"] 
