[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "ipyleaflet"
description = "A Jupyter widget for dynamic Leaflet maps"
readme = "README.md"
authors = [
    { name = "Project Jupyter", email = "jupyter@googlegroups.com" },
]
keywords = [
   "ipython", "jupyter", "widgets", "graphics", "GIS",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "ipywidgets>=7.6.0,<9",
    "traittypes>=0.2.1,<3",
    "xyzservices>=2021.8.1",
    "branca>=0.5.0",
    # Is there no automatic way to compute this with hatch??
    "jupyter_leaflet>=0.19,<0.20",
]
dynamic = [
    "version",
]

[project.license]
file = "LICENSE"

[tool.hatch.version]
path = "ipyleaflet/_version.py"
source = "code"

[project.urls]
Homepage = "https://github.com/jupyter-widgets/ipyleaflet"

[tool.hatch.build.targets.sdist]
exclude = [
    "*.gif"
]

[tool.hatch.build.targets.wheel]
packages = ["ipyleaflet"]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
]
ignore = ["E501", "E731"]
