[build-system]
requires = [
    "hatchling",
    "jupyterlab==4.*",
]
build-backend = "hatchling.build"

[project]
name = "ipyleaflet-core"
version = "0.18.1"
description = "A Jupyter widget for dynamic Leaflet maps"
readme = "../../README.md"
authors = [
    { name = "Project Jupyter", email = "jupyter@googlegroups.com" },
]
keywords = [
   "ipython", "jupyter", "widgets", "graphics", "GIS",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "ipywidgets>=7.6.0,<9",
    "traittypes>=0.2.1,<3",
    "xyzservices>=2021.8.1",
    "branca>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/jupyter-widgets/ipyleaflet"

[tool.hatch.build.targets.wheel]
packages = ["ipyleaflet"]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
]
ignore = ["E501", "E731"] 
