[build-system]
requires = [
    "hatchling",
    "jupyterlab==4.*",
    "hatch-nodejs-version>=0.3.2",
]
build-backend = "hatchling.build"

[project]
name = "jupyter-leaflet"
description = "ipyleaflet extensions for JupyterLab and Jupyter Notebook"
readme = "README.md"
authors = [
    { name = "Project Jupyter", email = "jupyter@googlegroups.com" },
]
keywords = [
   "ipython", "jupyter", "widgets", "graphics", "GIS",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dynamic = [
    "version",
]

[project.urls]
Homepage = "https://github.com/jupyter-widgets/ipyleaflet"

[project.license]
file = "LICENSE"

[tool.hatch.build]
artifacts = [
    "nbextension/index.*",
    "labextension",
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.build.targets.wheel.shared-data]
"nbextension" = "share/jupyter/nbextensions/jupyter-leaflet"
"labextension" = "share/jupyter/labextensions/jupyter-leaflet"
"jupyter-leaflet.json" = "etc/jupyter/nbconfig/notebook.d/jupyter-leaflet.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    ".yarn",
]

[tool.hatch.build.hooks.jupyter-builder]
ensured-targets = [
    "nbextension/index.js",
    "labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.8.1",
]
build-function = "hatch_jupyter_builder.npm_builder"

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build"
npm = [
    "jlpm",
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
]
ignore = ["E501", "E731"]
